novice/02-01/3.1.2. Strings.txt
>>> 'spam eggs'  # single quotes
'spam eggs'
>>> "spam eggs"
'spam eggs'
>>> 'doesn\'t'
"doesn't"
>>> "doesn't"
"doesn't"
>>> '"Yes," they said.'
'"Yes," they said.'
>>> "yes,"\they said
  File "<stdin>", line 1
    "yes,"\they said
           ^
SyntaxError: unexpected character after line continuation character
>>> '"Yes," they said.'
'"Yes," they said.'
>>> '"yes,"\they said."
  File "<stdin>", line 1
    '"yes,"\they said."
    ^
SyntaxError: unterminated string literal (detected at line 1)
>>> '"Isn\'t," they said.'
'"Isn\'t," they said.'
>>> '"Isn\'t," they said.'
'"Isn\'t," they said.'
>>> print('"Isn\'t," they said.')
"Isn't," they said.
>>> s = 'First line.\nSecond line.'
>>> s = 'First line.\nSecond line.' # \n means newline
>>> s  # without print(), \n is included in the output
'First line.\nSecond line.'
>>> 'First line.\nSecond line.'
'First line.\nSecond line.'
>>> print(s)  # with print(), \n produces a new line
First line.
Second line.
>>> print('C:\some\name')  # here \n means newline!
C:\some
ame
>>> print(r'C:\some\name')  # note the r before the quote
C:\some\name
>>> print("""\
... Usage: thingy [OPTIONS]
...      -h                        Display this usage message
...      -H hostname               Hostname to connect to
... """)
Usage: thingy [OPTIONS]
     -h                        Display this usage message
     -H hostname               Hostname to connect to

>>> print("""\
... Usage: thingy [OPTIONS]
...      -h                        Display this usage message
...      -H hostname               Hostname to connect to
... text = "# This is not a comment because it's inside quotes."
... print("""\
... Usage: thingy [OPTIONS]
  File "<stdin>", line 1
    print("""\
          ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> Usage: thingy [OPTIONS]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'thingy' is not defined
>>>     # 3 times 'un', followed by 'ium'
>>>  3 * 'un' + 'ium'
  File "<stdin>", line 1
    3 * 'un' + 'ium'
IndentationError: unexpected indent
>>> # 3 times 'un', followed by 'ium'
>>> 3 * 'un' + 'ium'
'unununium'
>>> 'Py' 'thon'
'Python'
>>>  text = ('Put several strings within parentheses '
  File "<stdin>", line 1
    text = ('Put several strings within parentheses '
IndentationError: unexpected indent
>>> ...         'to have them joined together.')
  File "<stdin>", line 1
    ...         'to have them joined together.')
                                               ^
SyntaxError: unmatched ')'
>>> text = ('Put several strings within parentheses '
...             'to have them joined together.')
>>> 'to have them joined together.')
  File "<stdin>", line 1
    'to have them joined together.')
                                   ^
SyntaxError: unmatched ')'
>>> text = ('Put several strings within parentheses '
...         'to have them joined together.')
>>>  text
  File "<stdin>", line 1
    text
IndentationError: unexpected indent
>>> text = ('Put several strings within parentheses '
... ...         'to have them joined together.')
  File "<stdin>", line 1
    text = ('Put several strings within parentheses '
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> text = ('Put several strings within parentheses '
...         'to have them joined together.')
>>> text
'Put several strings within parentheses to have them joined together.'
>>> prefix = 'Py'
>>> prefix 'thon'  # can't concatenate a variable and a string literal
  File "<stdin>", line 1
    prefix 'thon'  # can't concatenate a variable and a string literal
           ^^^^^^
SyntaxError: invalid syntax
>>>   File "<stdin>", line 1
  File "<stdin>", line 1
    File "<stdin>", line 1
IndentationError: unexpected indent
>>>     prefix 'thon'
  File "<stdin>", line 1
    prefix 'thon'
IndentationError: unexpected indent
>>>                 ^
  File "<stdin>", line 1
    ^
IndentationError: unexpected indent
>>> SyntaxError: invalid syntax
  File "<stdin>", line 1
    SyntaxError: invalid syntax
                         ^^^^^^
SyntaxError: invalid syntax
>>> prefix = 'Py'
>>> prefix 'thon'  # can't concatenate a variable and a string literal
  File "<stdin>", line 1
    prefix 'thon'  # can't concatenate a variable and a string literal
           ^^^^^^
SyntaxError: invalid syntax
>>>   File "<stdin>", line 1
  File "<stdin>", line 1
    File "<stdin>", line 1
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
  File "<stdin>", line 1
    File "<stdin>", line 1
IndentationError: unexpected indent
>>> prefix = 'Py'
>>> prefix +'thon'
'Python'
>>>text = ('Put several strings within parentheses '
...         'to have them joined together.')
>>> text
'Put several strings within parentheses to have them joined together.'
>>> word = 'Python'
>>> word[0]  # character in position 0
'P'
>>> word[0]  # character in position 0
'P'
>>> word[5]  # character in position 0
'n'
>>> word[-1]  # last character
'n'
>>> word[-2]  # second-last character
'o'
>>> word[-6]
'P'
>>> word[:2] + word[2:]
'Python'
>>>
>>> word[:2] + word[2:]
'Python'
>>> word[:4] + word[4:]
'Python'
>>> word[42]  # the word only has 6 characters
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: string index out of range
>>> word[4:42]
'on'
>>> word[42:]
''
>>> word[0] = 'J'
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'str' object does not support item assignment
>>> word[2:] = 'py'
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'str' object does not support item assignment
>>> 'J' + word[1:]
'Jython'
>>> word[:2] + 'py'
'Pypy'
>>> s = 'supercalifragilisticexpialidocious'
>>> len(s)
34